--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "analog-clock",
+  "description": "simple analog clock",
+  "homepage": "https://hughesmarissa.github.io/AnalogClock/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +14,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+	"deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,8 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
